@@ -316,6 +316,18 @@ attribute_def que_attr_def[] = {
        ATR_TYPE_LONG,
        PARENT_TYPE_QUE_ALL
      },
+/* QA_ATR_AclGroupSloppy */
+    {  ATTR_aclgrpslpy,          /* "acl_group_sloppy" */
+       decode_b,
+       encode_b,
+       set_b,
+       comp_b,
+       free_null,
+       NULL_FUNC,
+       NO_USER_SET,
+       ATR_TYPE_LONG,
+       PARENT_TYPE_QUE_ALL
+     },
 
    /* for execution queues only */
 
