@@ -12,6 +12,7 @@
   don't prevent connects to "down" nodes that are still talking (USC)
   allow file globs to work correctly under --enable-wordexp (USC)
   enable secondary group checking when evaluating queue acl_group attribute
+    - enable the new queue parameter "acl_group_sloppy"
   sol10 build system fixes (USC)
 
 2.0.0p4
